new exercises added

--- a/14 Devtools Tricks/index.html
+++ b/14 Devtools Tricks/index.html
@@ -10,7 +10,7 @@
     <p onClick="makeGreen()">×BREAK×DOWN×</p>
 
     <script>
-        const dogs = [{ name: 'Snickers', age: 2 }, { name: 'hugo', age: 8 }];
+         const dogs = [{ name: 'Snickers', age: 2 }, { name: 'hugo', age: 8 }];
 
         function makeGreen() {
         const p = document.querySelector('p');
@@ -18,37 +18,60 @@
         p.style.fontSize = '50px';
         }
 
-        console.assert(p.classList.contains('ouch'),
-         'That is wrong!');
+       
 
 // Regular
 
 // Interpolated
-
+console.log('Hello I am a %s string!', ':-');
 // Styled
-
+console.log('%c Hello I am a  string!', 'font-size:50px;');
 // warning!
-
+console.warn('oh nooo')
 // Error :|
-
+console.error('shiiiirtttt')
 // Info
-
+console.info('crocodiles eat 3 - 4 people');
 // Testing
+const p = document.querySelector('p');
 
+console.assert(p.classList.contains('ouch'), 'You did not select the right element')
 // clearing
-console.clear();
-console.dir(p)
+console.clear()
 // Viewing DOM Elements
+console.log(p)
+console.dir(p)
 
+console.clear()
 // Grouping together
-dogs.forEach(dog => {
-    console.log(`Thisi is ${dog.name}`);
-    console.log(`${dog.name} is ${dog.age} year old`)
-    console.log(`${dog.name} is ${dog.age * 7} dog years`)
-})
-// counting
+ dogs.forEach(dog => {
+     console.groupCollapsed(`${dog.name}`)
+     console.log(`this is ${dog.name}`);
+     console.log(`${dog.name} is ${dog.age} years old`);
+     console.log(`${dog.name} is ${dog.age * 7}  years old`);
+     console
+     .groupEnd(`{dog.name}`)
+ })
+
+ //counting
+ console.count('Wes');
+ console.count('Wes');
+ console.count('Steve');
+ console.count('Wes');
+ console.count('Wes');
+ console.count('Steve');
+ console.count('Steve');
+ console.count('Steve');
+ console.count('Steve');
 
 // timing
+console.time('fetching data');
+fetch('https://api.github.com/users/webos')
+    .then(data => data.json())
+    .then(data => {
+        console.timeEnd('fetching data');
+        console.log(data);
+    })
     </script>
 </body>
 </html>
